# django_post_app

./: Readme.md  pyproject.toml
django_post/: manage.py
django_post/django_post/: asgi.py  settings.py  urls.py  wsgi.py
django_post/django_post_app/: apps.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  tests_api.py  tests_unit.py  utils.py  views.py
django_post/django_post_app/migrations/: 0001_initial.py
